# diploma-secure-channel

./: .gitignore  README.md  TESTING_GUIDE.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
examples/: _identity_io.py  generate_identity.py  run_client.py  run_server.py
src/gui/: __init__.py  __main__.py  app_state.py  chat_view.py  connection_view.py  main.py
src/secure_channel/: __init__.py  identity_io.py
src/secure_channel/crypto/: __init__.py  _kalyna_tables.py  binary_curve.py  binary_field.py  dstu4145.py  dstu4145_curves.py  kalyna.py  kalyna_aead.py  kalyna_modes.py  kdf.py
src/secure_channel/network/: __init__.py  client.py  connection.py  file_transfer.py  framing.py  handshake_io.py  messages.py  server.py
src/secure_channel/session/: __init__.py  clock.py  handshake.py  key_exchange.py  records.py  replay_window.py  secure_session.py
src/secure_channel/utils/: __init__.py
tests/: __init__.py  test_anti_replay_attacks.py  test_binary_curve.py  test_binary_field.py  test_dstu4145_vectors.py  test_gui_smoke.py  test_handshake.py  test_kalyna_aead.py  test_kalyna_modes.py  test_kalyna_vectors.py  test_kdf.py  test_key_exchange.py  test_network_file_transfer.py  test_network_handshake.py  test_replay_window.py
