[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure_channel"
version = "0.1.0"
description = "Secure data exchange channel based on Ukrainian national cryptographic standards (DSTU 7624:2014, DSTU 4145-2002)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Denys Nazarenko", email = "Nazarenko.denis6@gmail.com" },
]
license = { text = "Academic-Use" }
keywords = ["dstu", "kalyna", "dstu7624", "dstu4145", "cryptography", "secure-channel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]
gui = [
    "flet>=0.21,<1.0",
]

[project.scripts]
secure-channel-gui = "gui.main:run"

# ---------------------------------------------------------------------------
# Flet build configuration
# ---------------------------------------------------------------------------
# Used by ``flet build {windows,macos,linux,apk,...}`` to populate platform-
# specific bundle metadata. The ``org`` is the reverse-DNS package
# identifier required by the Android APK.

[tool.flet]
org = "ua.lpnu.diploma.nazarenko"
product = "DSTU-Messenger"
company = "Lviv Polytechnic National University"
copyright = "Copyright (c) 2026 Denys Nazarenko, Lviv Polytechnic National University"
description = "Secure messenger built on DSTU 7624 (Kalyna) and DSTU 4145."

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "PIE", "RET", "SIM"]
ignore = ["S101"]
